# Device_DEV

./: .clang-format  CMakeLists.txt  CodingStandards.md  Device_t.code-workspace  Device_t.pro  Makefile  README.md
Algorithms/Calculus/Gps/: CMakeLists.txt  gps_coordinate_translation.h  gps_coordinates_calculations.h
CoreComponents/: CMakeLists.txt  global.hpp
DeviceManagement/: CMakeLists.txt
DeviceManagement/GPS/: CMakeLists.txt  device_gps_nmea.hpp  device_gps_pmtk.hpp
MemoryManagement/: CMakeLists.txt  linked_list.hpp  memory_pool.hpp  queue.hpp  ring_buffer.hpp
MemoryManagement/linked_list_test/: CMakeLists.txt  linked_list_test.cpp  linked_list_test.pro
MemoryManagement/memory_compression_test/: CMakeLists.txt  memory_compression_test.cpp  memory_compression_test.pro
MemoryManagement/memory_pool_test/: CMakeLists.txt  memory_pool_test.cpp  memory_pool_test.pro
MemoryManagement/queue_test/: CMakeLists.txt  queue_test.cpp
MemoryManagement/ring_buffer_test/: CMakeLists.txt  ring_buffer_test.cpp  ring_buffer_test.pro
StandardRules/: CodingStandards  DoxygenStandards.md  NamingStandards.md
Tools/Testing/: test_helper.hpp
Tools/Testing/GoogleTest/: CMakeLists.txt
Tools/Testing/GoogleTest/googletest/: CMakeCache.txt
